# kredentials

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.in.in  kredentials.1  kredentials.kdevelop
admin/: acinclude.m4.in  cvs.sh
cmake/modules/: CMakeLists.txt  FindKerberos5.cmake
debian/: changelog  control  copyright  dirs  menu  rules
doc/: CMakeLists.txt  Makefile.am
doc/en/: CMakeLists.txt  Makefile.am  index.docbook
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  krb5_wrap.cpp  krb5_wrap.h  krb_defs.h  krb_wrap.h  krbcheck.cpp  kredentials.cpp  kredentials.desktop  kredentials.h  kredentials.lsm  kredentialsui.rc  main.cpp  portinglog.txt
templates/: cpp  h
